新增统计用户数的功能